--- a/world/virtualbox/.artixlinux/pkgbase.yaml
+++ b/world/virtualbox/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,14 +29,14 @@ repos:
     packages: []
     debug: []
   world:
-    version: 7.1.8-4
+    version: 7.1.10-1
     packages:
-      - virtualbox-7.1.8-4-x86_64.pkg.tar.zst
-      - virtualbox-sdk-7.1.8-4-x86_64.pkg.tar.zst
-      - virtualbox-host-dkms-7.1.8-4-x86_64.pkg.tar.zst
-      - virtualbox-guest-utils-7.1.8-4-x86_64.pkg.tar.zst
-      - virtualbox-guest-utils-nox-7.1.8-4-x86_64.pkg.tar.zst
-      - virtualbox-ext-vnc-7.1.8-4-x86_64.pkg.tar.zst
+      - virtualbox-7.1.10-1-x86_64.pkg.tar.zst
+      - virtualbox-sdk-7.1.10-1-x86_64.pkg.tar.zst
+      - virtualbox-host-dkms-7.1.10-1-x86_64.pkg.tar.zst
+      - virtualbox-guest-utils-7.1.10-1-x86_64.pkg.tar.zst
+      - virtualbox-guest-utils-nox-7.1.10-1-x86_64.pkg.tar.zst
+      - virtualbox-ext-vnc-7.1.10-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
