--- a/world/virtualbox-guest-iso/.artixlinux/pkgbase.yaml
+++ b/world/virtualbox-guest-iso/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: virtualbox-guest-iso
-  version: 7.1.8-1
-  arch:
-    - any
-  pkgname:
-    - virtualbox-guest-iso
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 7.1.8-1
+    version: 7.1.10-1
     packages:
-      - virtualbox-guest-iso-7.1.8-1-any.pkg.tar.zst
+      - virtualbox-guest-iso-7.1.10-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
