--- a/lib32/lib32-audit/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-audit/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
-team: world
-pkgbase:
-  name: lib32-audit
-  version: 4.0.3-1
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-audit
+team: lib32
 actions:
   addRepo: lib32
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 4.0.3-1
+    version: 4.0.5-1
     packages:
-      - lib32-audit-4.0.3-1-x86_64.pkg.tar.zst
+      - lib32-audit-4.0.5-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
