--- a/world/ruby-protocol-rack/.artixlinux/pkgbase.yaml
+++ b/world/ruby-protocol-rack/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: ruby-protocol-rack
-  version: 0.12.0-1
-  arch:
-    - any
-  pkgname:
-    - ruby-protocol-rack
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.12.0-1
+    version: 0.13.0-1
     packages:
-      - ruby-protocol-rack-0.12.0-1-any.pkg.tar.zst
+      - ruby-protocol-rack-0.13.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
