--- a/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
+++ b/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
@@ -1,10 +1,10 @@
 ---
 team: world
 actions:
-  addRepo: world-gremlins
+  addRepo: world
   removeRepo: null
-  triggersBuild: false
-  triggersRebuild: true
+  triggersBuild: true
+  triggersRebuild: false
   triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
@@ -31,9 +31,9 @@ repos:
       - ruby-sass-embedded-1.89.0-1-any.pkg.tar.zst
     debug: []
   world:
-    version: 1.89.0-1
+    version: 1.89.1-1
     packages:
-      - ruby-sass-embedded-1.89.0-1-any.pkg.tar.zst
+      - ruby-sass-embedded-1.89.1-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
