--- a/world/bmake/.artixlinux/pkgbase.yaml
+++ b/world/bmake/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: bmake
-  version: 20250414-1
-  arch:
-    - x86_64
-  pkgname:
-    - bmake
 actions:
   addRepo: world
   removeRepo: null
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 20250414-1
+    version: 20250528-1
     packages:
-      - bmake-20250414-1-x86_64.pkg.tar.zst
+      - bmake-20250528-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
