--- a/world/tp_smapi/.artixlinux/pkgbase.yaml
+++ b/world/tp_smapi/.artixlinux/pkgbase.yaml
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 0.44-132
+    version: 0.44+r10+ga6122c0-1
     packages:
-      - tp_smapi-0.44-132-x86_64.pkg.tar.zst
+      - tp_smapi-0.44+r10+ga6122c0-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
