--- a/world/isoimagewriter/.artixlinux/srcinfo.yaml
+++ b/world/isoimagewriter/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: isoimagewriter
   pkgdesc: Program to write hybrid ISO files onto USB disks
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://apps.kde.org/isoimagewriter/
   arch:
     - x86_64
@@ -18,14 +18,14 @@ pkgbase:
   depends:
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - karchive
     - kcoreaddons
     - kcrash
     - ki18n
     - kiconthemes
     - kwidgetsaddons
-    - qgpgme-qt6
+    - qgpgme
     - qt6-base
     - solid
   source:
@@ -40,4 +40,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: isoimagewriter
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
