--- a/world/kmail/.artixlinux/srcinfo.yaml
+++ b/world/kmail/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: kmail
   pkgdesc: KDE mail client
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://apps.kde.org/kmail2/
   arch:
     - x86_64
@@ -23,7 +23,7 @@ pkgbase:
     - akonadi-search
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - kbookmarks
     - kcalendarcore
     - kcalutils
@@ -75,7 +75,7 @@ pkgbase:
     - pim-data-exporter
     - pim-sieve-editor
     - pimcommon
-    - qgpgme-qt6
+    - qgpgme
     - qt6-base
     - qt6-webengine
     - qtkeychain-qt6
@@ -95,4 +95,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: kmail
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
