--- a/world/kmymoney/.artixlinux/pkgbase.yaml
+++ b/world/kmymoney/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 5.1.3-23
+    version: 5.1.3-26
     packages:
-      - kmymoney-5.1.3-23-x86_64.pkg.tar.zst
+      - kmymoney-5.1.3-26-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
