--- a/world/kmymoney/.artixlinux/srcinfo.yaml
+++ b/world/kmymoney/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 5.1.3-23
+version: 5.1.3-26
 pkgbase:
   name: kmymoney
   pkgdesc: Personal finance manager for KDE which operates similarly to MS-Money or Quicken
   pkgver: 5.1.3
-  pkgrel: 23
+  pkgrel: 26
   url: https://kmymoney.org/
   changelog: kmymoney.changelog
   arch:
@@ -22,7 +22,7 @@ pkgbase:
     - sqlcipher
     - qt5-base
     - qt5-webengine
-    - gpgme
+    - gpgmepp
     - karchive5
     - kcoreaddons5
     - kconfig5
@@ -34,9 +34,7 @@ pkgbase:
     - kitemviews5
     - kservice5
     - kwallet5
-    - kiconthemes5
     - kxmlgui5
-    - kidentitymanagement5
     - ktextwidgets5
     - knotifications5
     - kio5
@@ -44,9 +42,7 @@ pkgbase:
     - kactivities5
     - kqtquickcharts
     - kdiagram5
-    - kcontacts5
     - libical
-    - libakonadi5
     - shared-mime-info
     - libofx
   optdepends:
@@ -61,4 +57,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: kmymoney
-# generated with artixpkg 0.36.2-2-any
+# generated with artixpkg 0.36.3-1-any
