--- a/world/kmymoney/PKGBUILD
+++ b/world/kmymoney/PKGBUILD
@@ -8,16 +8,16 @@
 
 pkgname=kmymoney
 pkgver=5.1.3
-pkgrel=23
+pkgrel=26
 pkgdesc="Personal finance manager for KDE which operates similarly to MS-Money or Quicken"
 arch=('x86_64')
 url="https://kmymoney.org/"
 license=('GPL')
-depends=('aqbanking' 'gwenhywfar' 'libalkimia' 'sqlcipher' 'qt5-base' 'qt5-webengine' 'gpgme' 'karchive5'
+depends=('aqbanking' 'gwenhywfar' 'libalkimia' 'sqlcipher' 'qt5-base' 'qt5-webengine' 'gpgmepp' 'karchive5'
          'kcoreaddons5' 'kconfig5' 'kwidgetsaddons5' 'ki18n5' 'kcompletion5' 'kcmutils5' 'kitemmodels5'
-         'kitemviews5' 'kservice5' 'kwallet5' 'kiconthemes5' 'kxmlgui5' 'kidentitymanagement5'
+         'kitemviews5' 'kservice5' 'kwallet5' 'kxmlgui5'
          'ktextwidgets5' 'knotifications5' 'kio5' 'kholidays5' 'kactivities5'
-         'kqtquickcharts' 'kdiagram5' 'kcontacts5' 'libical' 'libakonadi5' 'shared-mime-info' 'libofx')
+         'kqtquickcharts' 'kdiagram5' 'libical' 'shared-mime-info' 'libofx')
 makedepends=('extra-cmake-modules' 'kdoctools5' 'doxygen')
 optdepends=('perl: for financequote.pl')
 changelog=$pkgname.changelog
