--- a/world/kwallet/.artixlinux/srcinfo.yaml
+++ b/world/kwallet/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 6.14.1-1
+version: 6.14.1-3
 pkgbase:
   name: kwallet
   pkgdesc: Secure and unified container for user passwords
   pkgver: 6.14.1
-  pkgrel: 1
+  pkgrel: 3
   url: https://community.kde.org/Frameworks
   arch:
     - x86_64
@@ -24,7 +24,7 @@ pkgbase:
     - gcc-libs
     - glib2
     - glibc
-    - gpgme
+    - gpgmepp
     - kcolorscheme
     - kconfig
     - kcoreaddons
@@ -54,4 +54,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: kwallet
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.2-1-any
