--- a/world/samba/.artixlinux/pkgbase.yaml
+++ b/world/samba/.artixlinux/pkgbase.yaml
@@ -1,61 +1,63 @@
 ---
-pkgbase:
-  name: samba
-  version: 2:4.22.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - libwbclient
-    - ldb
-    - smbclient
-    - samba
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2:4.22.1-1
+    version: 2:4.22.1-2
     packages:
-      - libwbclient-2:4.22.1-1-x86_64.pkg.tar.zst
-      - ldb-2:4.22.1-1-x86_64.pkg.tar.zst
-      - smbclient-2:4.22.1-1-x86_64.pkg.tar.zst
-      - samba-2:4.22.1-1-x86_64.pkg.tar.zst
+      - libwbclient-2:4.22.1-2-x86_64.pkg.tar.zst
+      - ldb-2:4.22.1-2-x86_64.pkg.tar.zst
+      - smbclient-2:4.22.1-2-x86_64.pkg.tar.zst
+      - samba-2:4.22.1-2-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
