--- a/world/libcryptui/.artixlinux/pkgbase.yaml
+++ b/world/libcryptui/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: world-gremlins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: world
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -25,15 +25,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 1:3.12.2+r71+ged4f890e-1
-    packages:
-      - libcryptui-1:3.12.2+r71+ged4f890e-1-x86_64.pkg.tar.zst
-    debug:
-      - libcryptui-debug-1:3.12.2+r71+ged4f890e-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
+    debug: []
   world:
-    version: 1:3.12.2+r71+ged4f890e-1
+    version: 1:3.12.2+r71+ged4f890e-2
     packages:
-      - libcryptui-1:3.12.2+r71+ged4f890e-1-x86_64.pkg.tar.zst
+      - libcryptui-1:3.12.2+r71+ged4f890e-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
