--- a/world/libvirt-python/.artixlinux/pkgbase.yaml
+++ b/world/libvirt-python/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 1:11.3.0-1
+    version: 1:11.4.0-1
     packages:
-      - libvirt-python-1:11.3.0-1-x86_64.pkg.tar.zst
+      - libvirt-python-1:11.4.0-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
