--- a/world/mailcommon/.artixlinux/srcinfo.yaml
+++ b/world/mailcommon/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: mailcommon
   pkgdesc: KDE PIM library providing support for mail applications
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://kontact.kde.org
   arch:
     - x86_64
@@ -20,7 +20,7 @@ pkgbase:
     - akonadi-mime
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - karchive
     - kcodecs
     - kcolorscheme
@@ -45,7 +45,7 @@ pkgbase:
     - mailimporter
     - messagelib
     - pimcommon
-    - qgpgme-qt6
+    - qgpgme
     - qt6-base
     - qt6-multimedia
     - syntax-highlighting
@@ -61,4 +61,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: mailcommon
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
