--- a/world/merkuro/.artixlinux/srcinfo.yaml
+++ b/world/merkuro/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: merkuro
   pkgdesc: Application suite designed to handle emails, calendars, contacts and tasks
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://apps.kde.org/merkuro/
   arch:
     - x86_64
@@ -22,7 +22,7 @@ pkgbase:
     - akonadi-search
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - kcalendarcore
     - kcodecs
     - kconfig
@@ -79,4 +79,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: merkuro
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
