--- a/world/messagelib/.artixlinux/srcinfo.yaml
+++ b/world/messagelib/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: messagelib
   pkgdesc: KDE PIM messaging library
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://kontact.kde.org
   arch:
     - x86_64
@@ -21,7 +21,7 @@ pkgbase:
     - akonadi-search
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - grantleetheme
     - karchive
     - kcalendarcore
@@ -73,4 +73,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: messagelib
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
