--- a/world/messagelib/PKGBUILD
+++ b/world/messagelib/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=messagelib
 pkgver=25.04.1
-pkgrel=1
+pkgrel=2
 pkgdesc='KDE PIM messaging library'
 arch=(x86_64)
 url='https://kontact.kde.org'
@@ -13,7 +13,7 @@ depends=(akonadi-contacts
          akonadi-search
          gcc-libs
          glibc
-         gpgme
+         gpgmepp
          grantleetheme
          karchive
          kcalendarcore
