--- a/world/mimetreeparser/.artixlinux/srcinfo.yaml
+++ b/world/mimetreeparser/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.1-1
+version: 25.04.1-2
 pkgbase:
   name: mimetreeparser
   pkgdesc: Parser for MIME trees
   pkgver: 25.04.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://kontact.kde.org
   arch:
     - x86_64
@@ -18,7 +18,7 @@ pkgbase:
   depends:
     - gcc-libs
     - glibc
-    - gpgme
+    - gpgmepp
     - kcalendarcore
     - ki18n
     - kirigami
@@ -26,7 +26,7 @@ pkgbase:
     - kmime
     - kwidgetsaddons
     - libkleo
-    - qgpgme-qt6
+    - qgpgme
     - qt6-base
     - qt6-declarative
     - qt6-webengine
@@ -42,4 +42,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: mimetreeparser
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
