--- a/world/mimetreeparser/PKGBUILD
+++ b/world/mimetreeparser/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=mimetreeparser
 pkgver=25.04.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Parser for MIME trees'
 arch=(x86_64)
 url='https://kontact.kde.org'
 license=(LGPL-2.0-or-later)
 depends=(gcc-libs
          glibc
-         gpgme
+         gpgmepp
          kcalendarcore
          ki18n
          kirigami
@@ -18,7 +18,7 @@ depends=(gcc-libs
          kmime
          kwidgetsaddons
          libkleo
-         qgpgme-qt6
+         qgpgme
          qt6-base
          qt6-declarative
          qt6-webengine)
