--- a/world/neomutt/PKGBUILD
+++ b/world/neomutt/PKGBUILD
@@ -6,7 +6,7 @@
 # Contributor: Leonidas Spyropoulos <artafinde@gmail.com>
 pkgname=neomutt
 pkgver=20250510
-pkgrel=1
+pkgrel=2
 pkgdesc='A version of mutt with added features'
 url='https://neomutt.org/'
 license=('GPL-2.0-only')
@@ -39,6 +39,7 @@ makedepends=(
     'git'
     'gnupg'
     'libxslt'
+  'notmuch'
     'w3m'
 )
 source=(
