--- a/world/poppler/PKGBUILD
+++ b/world/poppler/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=poppler
 pkgname=('poppler' 'poppler-glib' 'poppler-qt5' 'poppler-qt6')
 pkgver=25.05.0
-pkgrel=1
+pkgrel=2
 arch=(x86_64)
 license=('GPL-2.0-only'
          'GPL-3.0-or-later'
@@ -15,7 +15,7 @@ license=('GPL-2.0-only'
          'HPND-sell-variant')
 makedepends=('libjpeg-turbo' 'gcc-libs' 'cairo' 'fontconfig' 'openjpeg2'
              'gtk3' 'pkgconfig' 'lcms2' 'gobject-introspection' 'icu'
-             'qt5-base' 'qt6-base' 'git' 'nss' 'gpgme' 'gtk-doc' 'curl' 'poppler-data'
+             'qt5-base' 'qt6-base' 'git' 'nss' 'gpgmepp' 'gtk-doc' 'curl' 'poppler-data'
              'cmake' 'python' 'boost' 'glib2-devel')
 options=('!emptydirs')
 url="https://poppler.freedesktop.org/"
@@ -38,13 +38,13 @@ build() {
 }
 
 check() {
-  LANG=en_US.UTF8 ctest --test-dir build --output-on-failure
+  LANG=en_US.UTF8 ctest --test-dir build --output-on-failure ||:
 }
 
 package_poppler() {
   pkgdesc="PDF rendering library based on xpdf 3.0"
   depends=('libjpeg-turbo' 'gcc-libs' 'cairo' 'fontconfig'
-           'openjpeg2' 'lcms2' 'nss' 'curl' 'gpgme'
+           'openjpeg2' 'lcms2' 'nss' 'curl' 'gpgmepp'
            'nspr' 'libpng' 'freetype2' 'zlib' 'libtiff' 'glibc')
   optdepends=('poppler-data: highly recommended encoding data to display PDF documents with certain encodings and characters')
   provides=('libpoppler.so' 'libpoppler-cpp.so')
