--- a/world/poppler/.artixlinux/srcinfo.yaml
+++ b/world/poppler/.artixlinux/srcinfo.yaml
@@ -1,9 +1,9 @@
 ---
-version: 25.05.0-1
+version: 25.05.0-2
 pkgbase:
   name: poppler
   pkgver: 25.05.0
-  pkgrel: 1
+  pkgrel: 2
   url: https://poppler.freedesktop.org/
   arch:
     - x86_64
@@ -29,7 +29,7 @@ pkgbase:
     - qt6-base
     - git
     - nss
-    - gpgme
+    - gpgmepp
     - gtk-doc
     - curl
     - poppler-data
@@ -61,7 +61,7 @@ pkgname:
       - lcms2
       - nss
       - curl
-      - gpgme
+      - gpgmepp
       - nspr
       - libpng
       - freetype2
@@ -109,4 +109,4 @@ pkgname:
       - glibc
     provides:
       - libpoppler-qt6.so
-# generated with artixpkg 0.36.1-1-any
+# generated with artixpkg 0.36.3-1-any
