Updated claws-mail - 4.3.1-3

--- a/galaxy/claws-mail/.artixlinux/pkgbase.yaml
+++ b/galaxy/claws-mail/.artixlinux/pkgbase.yaml
@@ -1,12 +1,12 @@
 ---
 team: galaxy
 actions:
-  addRepo: galaxy-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: galaxy
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,16 +46,15 @@ repos:
     packages: []
     debug: []
   galaxy-goblins:
-    version: 4.3.1-2
-    packages:
-      - claws-mail-4.3.1-2-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   galaxy-gremlins:
     version: null
     packages: []
     debug: []
   galaxy:
-    version: 4.3.1-2
+    version: 4.3.1-3
     packages:
-      - claws-mail-4.3.1-2-x86_64.pkg.tar.zst
+      - claws-mail-4.3.1-3-x86_64.pkg.tar.zst
     debug: []
