Updated libreoffice-still - 24.8.7-2

--- a/galaxy/libreoffice-still/.artixlinux/pkgbase.yaml
+++ b/galaxy/libreoffice-still/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: galaxy
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: galaxy-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -45,17 +45,19 @@ repos:
     packages: []
     debug: []
   galaxy-goblins:
-    version: null
-    packages: []
+    version: 24.8.7-2
+    packages:
+      - libreoffice-still-sdk-24.8.7-2-x86_64.pkg.tar.zst
+      - libreoffice-still-24.8.7-2-x86_64.pkg.tar.zst
     debug: []
   galaxy-gremlins:
     version: null
     packages: []
     debug: []
   galaxy:
-    version: 24.8.7-1
+    version: 24.8.7-2
     packages:
-      - libreoffice-still-sdk-24.8.7-1-x86_64.pkg.tar.zst
-      - libreoffice-still-24.8.7-1-x86_64.pkg.tar.zst
+      - libreoffice-still-sdk-24.8.7-2-x86_64.pkg.tar.zst
+      - libreoffice-still-24.8.7-2-x86_64.pkg.tar.zst
     debug: []
 team: galaxy
