--- a/galaxy/libreoffice-still/.artixlinux/srcinfo.yaml
+++ b/galaxy/libreoffice-still/.artixlinux/srcinfo.yaml
@@ -1,9 +1,9 @@
 ---
-version: 24.8.7-1
+version: 24.8.7-2
 pkgbase:
   name: libreoffice-still
   pkgver: 24.8.7
-  pkgrel: 1
+  pkgrel: 2
   url: https://www.libreoffice.org/
   arch:
     - x86_64
@@ -110,6 +110,7 @@ pkgbase:
     - python-setuptools
     - rhino
     - argon2
+    - gpgmepp
   noextract:
     - a7983f859eafb2677d7ff386a023bc40-xsltml_2.1.2.zip
     - 0168229624cfac409e766913506961a8-ucpp-1.3.2.tar.gz
@@ -265,7 +266,7 @@ pkgname:
       - libatomic_ops
       - xmlsec
       - libnumbertext
-      - gpgme
+      - gpgmepp
       - libfreehand
       - libstaroffice
       - libepubgen
@@ -323,4 +324,4 @@ pkgname:
       - etc/libreoffice/psprint.conf
       - etc/profile.d/libreoffice-still.sh
       - etc/profile.d/libreoffice-still.csh
-# generated with artixpkg 0.36.1-3-any
+# generated with artixpkg 0.36.3-1-any
