Updated pacman - 7.0.0.r6.gc685ae6-6

--- a/system/pacman/.artixlinux/pkgbase.yaml
+++ b/system/pacman/.artixlinux/pkgbase.yaml
@@ -9,18 +9,17 @@ actions:
   triggersNoCheck: false
 repos:
   system-goblins:
-    version: 7.0.0.r6.gc685ae6-6
-    packages:
-      - pacman-7.0.0.r6.gc685ae6-6-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   system-gremlins:
     version: null
     packages: []
     debug: []
   system:
-    version: 7.0.0.r6.gc685ae6-5
+    version: 7.0.0.r6.gc685ae6-6
     packages:
-      - pacman-7.0.0.r6.gc685ae6-5-x86_64.pkg.tar.zst
+      - pacman-7.0.0.r6.gc685ae6-6-x86_64.pkg.tar.zst
     debug: []
   world-goblins:
     version: null
