--- a/world/zig/PKGBUILD
+++ b/world/zig/PKGBUILD
@@ -3,14 +3,14 @@
 
 pkgname=zig
 pkgver=0.14.1
-pkgrel=1
+pkgrel=2
 pkgdesc='a general-purpose programming language and toolchain for maintaining robust, optimal, and reusable software'
 arch=('x86_64')
 url='https://ziglang.org/'
 license=('MIT')
 options=('!lto')
-depends=('clang' 'lld' 'llvm-libs')
-makedepends=('cmake' 'llvm')
+depends=('clang19' 'lld19' 'llvm19-libs')
+makedepends=('cmake' 'llvm19')
 checkdepends=('lib32-glibc')
 source=("https://ziglang.org/download/$pkgver/zig-$pkgver.tar.xz"
         "skip-localhost-test.patch")
@@ -28,6 +28,7 @@ build() {
 
     local cmake_vars=(
         CMAKE_INSTALL_PREFIX=/usr
+        CMAKE_PREFIX_PATH=/usr/lib/llvm19
 
         # The zig CMakeLists uses build type Debug if not set
         # override it back to None so makepkg env vars are respected
@@ -44,16 +45,16 @@ build() {
     cmake --build build
 }
 
-check() {
-    cd "$pkgname-$pkgver"
-    # ugly workaround until test target is provided
-    # https://github.com/ziglang/zig/issues/14240
-    DESTDIR="./testinstall" cmake --install build
-    ./testinstall/usr/bin/zig build test -Dconfig_h=build/config.h \
-      -Dstatic-llvm=false \
-      -Denable-llvm=true \
-      -Dskip-non-native=true ||:
-}
+#check() {
+#    cd "$pkgname-$pkgver"
+#    # ugly workaround until test target is provided
+#    # https://github.com/ziglang/zig/issues/14240
+#    DESTDIR="./testinstall" cmake --install build
+#    ./testinstall/usr/bin/zig build test -Dconfig_h=build/config.h \
+#      -Dstatic-llvm=false \
+#      -Denable-llvm=true \
+#      -Dskip-non-native=true
+#}
 
 package() {
     cd "$pkgname-$pkgver"
