--- a/world/zig/.artixlinux/srcinfo.yaml
+++ b/world/zig/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 0.14.1-1
+version: 0.14.1-2
 pkgbase:
   name: zig
   pkgdesc: a general-purpose programming language and toolchain for maintaining robust, optimal, and reusable software
   pkgver: 0.14.1
-  pkgrel: 1
+  pkgrel: 2
   url: https://ziglang.org/
   arch:
     - x86_64
@@ -14,11 +14,11 @@ pkgbase:
     - lib32-glibc
   makedepends:
     - cmake
-    - llvm
+    - llvm19
   depends:
-    - clang
-    - lld
-    - llvm-libs
+    - clang19
+    - lld19
+    - llvm19-libs
   options:
     - '!lto'
   source:
