Updated linux-tools - 6.15-1

--- a/world/linux-tools/.artixlinux/pkgbase.yaml
+++ b/world/linux-tools/.artixlinux/pkgbase.yaml
@@ -1,22 +1,4 @@
 ---
-pkgbase:
-  name: linux-tools
-  version: 6.14-1
-  arch:
-    - x86_64
-  pkgname:
-    - bootconfig
-    - bpf
-    - cpupower
-    - hyperv
-    - intel-speed-select
-    - kcpuid
-    - linux-tools-meta
-    - perf
-    - tmon
-    - turbostat
-    - usbip
-    - x86_energy_perf_policy
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -29,49 +11,61 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 6.14-1
+    version: 6.15-1
     packages:
-      - bootconfig-6.14-1-x86_64.pkg.tar.zst
-      - bpf-6.14-1-x86_64.pkg.tar.zst
-      - cpupower-6.14-1-x86_64.pkg.tar.zst
-      - hyperv-6.14-1-x86_64.pkg.tar.zst
-      - intel-speed-select-6.14-1-x86_64.pkg.tar.zst
-      - kcpuid-6.14-1-x86_64.pkg.tar.zst
-      - linux-tools-meta-6.14-1-x86_64.pkg.tar.zst
-      - perf-6.14-1-x86_64.pkg.tar.zst
-      - tmon-6.14-1-x86_64.pkg.tar.zst
-      - turbostat-6.14-1-x86_64.pkg.tar.zst
-      - usbip-6.14-1-x86_64.pkg.tar.zst
-      - x86_energy_perf_policy-6.14-1-x86_64.pkg.tar.zst
+      - bootconfig-6.15-1-x86_64.pkg.tar.zst
+      - bpf-6.15-1-x86_64.pkg.tar.zst
+      - cpupower-6.15-1-x86_64.pkg.tar.zst
+      - hyperv-6.15-1-x86_64.pkg.tar.zst
+      - intel-speed-select-6.15-1-x86_64.pkg.tar.zst
+      - kcpuid-6.15-1-x86_64.pkg.tar.zst
+      - linux-tools-meta-6.15-1-x86_64.pkg.tar.zst
+      - perf-6.15-1-x86_64.pkg.tar.zst
+      - tmon-6.15-1-x86_64.pkg.tar.zst
+      - turbostat-6.15-1-x86_64.pkg.tar.zst
+      - usbip-6.15-1-x86_64.pkg.tar.zst
+      - x86_energy_perf_policy-6.15-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
