--- a/world/wxwidgets/.nvchecker.toml
+++ b/world/wxwidgets/.nvchecker.toml
@@ -3,4 +3,4 @@ source = 'github'
 github = 'wxWidgets/wxWidgets'
 use_max_tag = true
 prefix = 'v'
-exclude_regex = '.*rc.*'
+exclude_regex = '.*rc.*|v3.[13579].\d+.*'
