--- a/world/ldc/.artixlinux/pkgbase.yaml
+++ b/world/ldc/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 3:1.40.1-2
+    version: 3:1.40.1-3
     packages:
-      - ldc-3:1.40.1-2-x86_64.pkg.tar.zst
-      - liblphobos-3:1.40.1-2-x86_64.pkg.tar.zst
+      - ldc-3:1.40.1-3-x86_64.pkg.tar.zst
+      - liblphobos-3:1.40.1-3-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
