Updated python-django-guardian - 3.0.1-1

--- a/world/python-django-guardian/.nvchecker.toml
+++ b/world/python-django-guardian/.nvchecker.toml
@@ -1,3 +1,3 @@
 [python-django-guardian]
-source = "pypi"
-pypi = "django-guardian"
+source = "git"
+git = "https://github.com/django-guardian/django-guardian"
