--- a/world/python-django-guardian/PKGBUILD
+++ b/world/python-django-guardian/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=python-django-guardian
 _name="${pkgname#python-}"
-pkgver=2.4.0
-pkgrel=7
+pkgver=3.0.1
+pkgrel=1
 pkgdesc="Per object permissions for Django"
 arch=(any)
 url="https://github.com/django-guardian/django-guardian"
@@ -26,9 +26,9 @@ checkdepends=(
   python-pytest
   python-pytest-django
 )
-source=($pkgname-$pkgver.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz)
-sha512sums=('820dad68d0a7aa5b907803a3b7be2daf3f9d811dc51efcd1adc3c151f1468749943a0ce35514b83d7a64a4d2851ea2eca1581df928f516902a3cf38bca88c6be')
-b2sums=('ce53b605f49e4671cd997a45f8fb8d605bed28693a7920e08a9269fe8ef9831864a5a234b927fee87db4d0c29a496c117f1f154d3e42b806eaafdf7bab444f51')
+source=($pkgname-$pkgver.tar.gz::$url/archive/refs/tags/$pkgver.tar.gz)
+sha512sums=('5f07b5b336a7126bb42e6212681536af608a13b320b372413cf671f7515f81f83b9f793c992e97e51e5008958620232aaa61ceaee03c0ef67ae770e351d6e74d')
+b2sums=('b261f7823b41e03eafb33294c6a715886d008fb303270d4acec0543063a283a68042d1de3814b9e7439655eed0da50a8b07c48327fb45711fce50c364196426b')
 
 prepare() {
   sed -n '1,23p' $_name-$pkgver/LICENSE > BSD-2-Clause.txt
@@ -49,7 +49,6 @@ check() {
 package() {
   cd $_name-$pkgver
   python -m installer --destdir="$pkgdir" dist/*.whl
-  install -vDm 644 {AUTHORS,CHANGES,README.rst} -t "$pkgdir/usr/share/doc/$pkgname/"
+  install -vDm 644 {README,SECURITY}.md -t "$pkgdir/usr/share/doc/$pkgname/"
   install -vDm 644 ../*.txt -t "$pkgdir/usr/share/licenses/$pkgname/"
 }
-
