--- a/galaxy/libstrophe/.artixlinux/pkgbase.yaml
+++ b/galaxy/libstrophe/.artixlinux/pkgbase.yaml
@@ -1,13 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: libstrophe
-  version: 1:0.13.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - libstrophe
-    - libstrophe-doc
 actions:
   addRepo: galaxy
   removeRepo: null
@@ -20,38 +12,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 1:0.13.1-1
+    version: 1:0.14.0-1
     packages:
-      - libstrophe-1:0.13.1-1-x86_64.pkg.tar.zst
-      - libstrophe-doc-1:0.13.1-1-x86_64.pkg.tar.zst
+      - libstrophe-1:0.14.0-1-x86_64.pkg.tar.zst
+      - libstrophe-doc-1:0.14.0-1-x86_64.pkg.tar.zst
+    debug: []
