--- a/world/python-xarray/.artixlinux/pkgbase.yaml
+++ b/world/python-xarray/.artixlinux/pkgbase.yaml
@@ -1,12 +1,12 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
-  triggersNoCheck: true
+  triggersRepoRemove: true
+  triggersNoCheck: false
 repos:
   system-goblins:
     version: null
@@ -25,14 +25,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 2025.04.0-1
-    packages:
-      - python-xarray-2025.04.0-1-any.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world:
-    version: 2025.04.0-1
+    version: 2025.06.1-1
     packages:
-      - python-xarray-2025.04.0-1-any.pkg.tar.zst
+      - python-xarray-2025.06.1-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
